src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Learned_about_program__c</fullName>
        <label>Learned about program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attended a Workshop</fullName>
                </value>
                <value>
                    <fullName>Flyer</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Info Session</fullName>
                </value>
                <value>
                    <fullName>Mass Grant Program</fullName>
                </value>
                <value>
                    <fullName>Online/social media</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Referred by Teacher / Counselor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_id__c</fullName>
        <description>External id for data migration</description>
        <externalId>true</externalId>
        <label>Legacy_id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Limited_English_Proficiency__c</fullName>
        <inlineHelpText>Limited English Proficiency (at time of initial selection)</inlineHelpText>
        <label>Limited English Proficiency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lobbying_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lobbying Activity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lobbying_Notes__c</fullName>
        <label>Lobbying Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Long_term_Goal__c</fullName>
        <label>Long-term Goal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_2__c</fullName>
        <label>Mailing Street #2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                </value>
                <value>
                    <fullName>Unknown/Not disclosed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Notes__c</fullName>
        <label>Marketing Notes:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Media_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, allows ASA to use video, images, and pictures of the student in future Talent Search brochures, applications, and other marketing information.</inlineHelpText>
        <label>Media Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle__c</fullName>
        <description>Middle Initial</description>
        <label>MI</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone_FOR_WF__c</fullName>
        <label>Mobile Phone (FOR WF)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mother_s_college__c</fullName>
        <label>Mother&apos;s college</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSI_Person_ID__c</fullName>
        <label>NSI Person ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nick_Name__c</fullName>
        <label>Nick Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Longer_Here__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Longer Here</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Academic_Need__c</fullName>
        <label>Other Academic Need</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low educational aspirations</fullName>
                </value>
                <value>
                    <fullName>Lack of opportunity, support, or guidance</fullName>
                </value>
                <value>
                    <fullName>Lack of career goals and/or accurate info</fullName>
                </value>
                <value>
                    <fullName>Limited English proficiency</fullName>
                </value>
                <value>
                    <fullName>Low confidence/self-esteem/social skills</fullName>
                </value>
                <value>
                    <fullName>Low-income community</fullName>
                </value>
                <value>
                    <fullName>Rural isolation</fullName>
                </value>
                <value>
                    <fullName>Interest in careers in math or science</fullName>
                </value>
                <value>
                    <fullName>Diagnosed learning disability</fullName>
                </value>
                <value>
                    <fullName>Low GPA and/or achievement test scores</fullName>
                </value>
                <value>
                    <fullName>More than one</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Learned_about_program__c</fullName>
        <label>Other: Learned about program</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone_FOR_WF__c</fullName>
        <label>Other Phone (FOR WF)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Programs__c</fullName>
        <inlineHelpText>This is related to Statement of needs</inlineHelpText>
        <label>Other Programs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pardot_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field captures the Opt Out request from a Pardot campaign.</description>
        <inlineHelpText>This field captures the Opt Out request from a Pardot campaign.</inlineHelpText>
        <label>Pardot Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Email__c</fullName>
        <label>Parent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian1_First_Name__c</fullName>
        <label>Parent/Guardian1 First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian1_Last_Name__c</fullName>
        <label>Parent/Guardian1 Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian2_First_Name__c</fullName>
        <label>Parent/Guardian2 First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian2_Last_Name__c</fullName>
        <label>Parent/Guardian2 Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Signature_received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent Signature received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Participants_Name_Change_Optional__c</fullName>
        <label>Participant’s Name Change (Optional)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participants_in_2011_12_postsecondary__c</fullName>
        <description>THIS FIELD SHOULD NOT BE USED AND CAN BE DELETED.</description>
        <formula>DATE(VALUE(TEXT(Post_Secondary_Ed_Enrollment_Cohort__c)) + 6,1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participants in 2011-12 postsecondary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Portal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A Portal User; school, sponsor, partner, etc.</inlineHelpText>
        <label>Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Secondary_Ed_Enrollment_Cohort__c</fullName>
        <description>This is used by Upward Bound and should only appear on the Upward Bound Page Layout.</description>
        <inlineHelpText>This is used by Upward Bound.</inlineHelpText>
        <label>Postsec Education Enrollment Cohort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>n/a (does not qualify for cohort)</fullName>
                </value>
                <value>
                    <fullName>n/a (still in HS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Secondary_Ins_1st_Attended__c</fullName>
        <inlineHelpText>School Code for Post Secondary Institution First Attended.</inlineHelpText>
        <label>Post Secondary Ins 1st Attended</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Secondary_STEM_Degree_UBMS_only__c</fullName>
        <label>Post Secondary STEM Degree (UBMS only)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Secondary_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It&apos;s unclear how CPS users plan to use and set this field (since tracking can be determined by the cohort year and Objective E value recorded on Campaign Member). Until this is determined, this field should not be included on any page layout.</description>
        <label>Post Secondary Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone_Type__c</fullName>
        <label>Preferred Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <label>Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cantonese</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French-Creole</fullName>
                </value>
                <value>
                    <fullName>Mandarin</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <formula>Owner.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Graduation_Year__c</fullName>
        <formula>YEAR( Expected_Graduation_date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Graduation Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RETAIN_CONTACT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you want to keep this Contact record.  All Contacts without a checkmark will be DELETED as part of the cleanup project.</inlineHelpText>
        <label>RETAIN CONTACT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive Newsletter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If contact has agreed to be a Reference for ASA</description>
        <label>Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referred_by__c</fullName>
        <label>Referred by</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resident_Alien_Resident_ID__c</fullName>
        <label>Resident Alien &amp; Resident ID</label>
        <length>9</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Role_to_ASA__c</fullName>
        <label>Role to ASA</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admissions Contact</fullName>
                </value>
                <value>
                    <fullName>Bursar Contact</fullName>
                </value>
                <value>
                    <fullName>Call Center FIN AID contact</fullName>
                </value>
                <value>
                    <fullName>Champion</fullName>
                </value>
                <value>
                    <fullName>Contract Contact</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Default Manager</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Invoice Contact</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
                <value>
                    <fullName>Print Address</fullName>
                </value>
                <value>
                    <fullName>Servicer Access Official</fullName>
                </value>
                <value>
                    <fullName>Speaker</fullName>
                </value>
                <value>
                    <fullName>Strategic Partner</fullName>
                </value>
                <value>
                    <fullName>Technical Contact</fullName>
                </value>
                <value>
                    <fullName>TRIO Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SALT_Ambassador_Advisor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SALT Ambassador Advisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SALT_Ambassador_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SALT Ambassador Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SALT_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FORMERLY called the School Newsletter field.  When the two newsletters were combined, this field was merged with the Campus Engagement Newsletter field recipients - and then the CEN field was deleted on 1/26/15.</description>
        <inlineHelpText>If this contact should receive the SALT newsletter please check this box.</inlineHelpText>
        <label>SALT Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SALT_Store_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates that the contact is a user in the SALT Store.</description>
        <inlineHelpText>This field indicates that the contact is a user in the SALT Store.</inlineHelpText>
        <label>SALT Store User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SALT_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box for SALT implementation team/primary contacts.</inlineHelpText>
        <label>SALT Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>9</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Satellite_Intake_Location__c</fullName>
        <label>Satellite Intake Location</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Guidance_Counselor__c</fullName>
        <label>School Guidance Counselor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sortable_Title__c</fullName>
        <description>What is the title equal to in a heirarchy.</description>
        <label>Sortable Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin/Exec. Assistant</fullName>
                </value>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>ASA Board Of Directors</fullName>
                </value>
                <value>
                    <fullName>ASA Business Sponsor</fullName>
                </value>
                <value>
                    <fullName>ASA Employee</fullName>
                </value>
                <value>
                    <fullName>Assistant Dean</fullName>
                </value>
                <value>
                    <fullName>Assistant Director</fullName>
                </value>
                <value>
                    <fullName>Assistant Manager</fullName>
                </value>
                <value>
                    <fullName>Associate Dean</fullName>
                </value>
                <value>
                    <fullName>Associate Director</fullName>
                </value>
                <value>
                    <fullName>Associate Provost</fullName>
                </value>
                <value>
                    <fullName>Associate Vice President</fullName>
                </value>
                <value>
                    <fullName>Bursar</fullName>
                </value>
                <value>
                    <fullName>Career Services</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>Chair</fullName>
                </value>
                <value>
                    <fullName>Chancelor</fullName>
                </value>
                <value>
                    <fullName>Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Operating Officer</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>Clerk</fullName>
                </value>
                <value>
                    <fullName>Client Manager</fullName>
                </value>
                <value>
                    <fullName>Client Services</fullName>
                </value>
                <value>
                    <fullName>Comptroller</fullName>
                </value>
                <value>
                    <fullName>Controller</fullName>
                </value>
                <value>
                    <fullName>Coordinator</fullName>
                </value>
                <value>
                    <fullName>Counselor</fullName>
                </value>
                <value>
                    <fullName>Dean</fullName>
                </value>
                <value>
                    <fullName>Default Manager</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsor_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this contact should receive the sponsor newsletter please check.</description>
        <inlineHelpText>If this contact should receive the sponsor newsletter please check.</inlineHelpText>
        <label>Sponsor Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Statement_of_Need__c</fullName>
        <label>Statement of Need</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic Advising</fullName>
                </value>
                <value>
                    <fullName>ACT/SAT Test Prep</fullName>
                </value>
                <value>
                    <fullName>Career Counseling/Majors</fullName>
                </value>
                <value>
                    <fullName>Career Field Trips</fullName>
                </value>
                <value>
                    <fullName>College Admissions</fullName>
                </value>
                <value>
                    <fullName>College Campus Visits</fullName>
                </value>
                <value>
                    <fullName>College Prep Workshops</fullName>
                </value>
                <value>
                    <fullName>Essay Writing</fullName>
                </value>
                <value>
                    <fullName>Financial Aid</fullName>
                </value>
                <value>
                    <fullName>Study Skills</fullName>
                </value>
                <value>
                    <fullName>Tutoring in</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Services__c</fullName>
        <label>Strategic Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Endorsed</fullName>
                </value>
                <value>
                    <fullName>Key Contact</fullName>
                </value>
                <value>
                    <fullName>Personal Contact</fullName>
                </value>
                <value>
                    <fullName>Receive Ongoing Communication</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_ID__c</fullName>
        <label>Student ID</label>
        <length>15</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <formula>LastName + &quot;, &quot; + FirstName + &quot; &quot; + Middle_Name__c + &quot; (&quot; + Birth_Year__c + &quot;)&quot;</formula>
        <label>Student Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <description>Suffix of person name</description>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Esq.</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>Jr</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>PhD</fullName>
                </value>
                <value>
                    <fullName>RN</fullName>
                </value>
                <value>
                    <fullName>SJ</fullName>
                </value>
                <value>
                    <fullName>Sr</fullName>
                </value>
                <value>
                    <fullName>USMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TTY_TDD_Phone__c</fullName>
        <label>TTY/TDD Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Office__c</fullName>
        <label>Target Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Admissions Office</fullName>
                </value>
                <value>
                    <fullName>Advancement Office</fullName>
                </value>
                <value>
                    <fullName>Alumni Office</fullName>
                </value>
                <value>
                    <fullName>Business Office</fullName>
                </value>
                <value>
                    <fullName>Career Services Office</fullName>
                </value>
                <value>
                    <fullName>Enrollment Management</fullName>
                </value>
                <value>
                    <fullName>Financial Aid Office</fullName>
                </value>
                <value>
                    <fullName>President&apos;s Office</fullName>
                </value>
                <value>
                    <fullName>Registrar&apos;s Office</fullName>
                </value>
                <value>
                    <fullName>Student Life Office</fullName>
                </value>
                <value>
                    <fullName>Veterans Affairs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tutoring_Topic__c</fullName>
        <label>Tutoring Topic</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Page__c</fullName>
        <label>Web Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>c2g__EnableEmailNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Email Notification (FM Community)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eClips__c</fullName>
        <defaultValue>false</defaultValue>
        <label>eClips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Federally_Funded_Programs__c</fullName>
        <label># of Federally Funded Programs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this contact.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this contact.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>